working out the swagger UI to properly display the locks
